--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background-color: #c9b5ab;
-  font-family: PT Serif, serif;
+  font-family: "PT Serif", serif;
   font-size: .8rem;
   line-height: 1.5;
 }
@@ -9,6 +9,7 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
 img {
   width: 100%;
 }
