--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,23 @@
 html {
   box-sizing: border-box;
   background-color: #c9b5ab;
-  font-family: "PT Serif", serif;
-  font-size: .8rem;
-  line-height: 1.5;
 }
 
-*, *::before, *::after {
+* {
   box-sizing: inherit;
+  line-height: 1.5;
+  font-weight: normal;
+  font-family: "PT Sans", "PT Serif";
 }
 
+h1{
+  color: #3f1622;
+  font-weight: bold;
+}
+
+a {
+
+}
 img {
   width: 100%;
 }
@@ -17,18 +25,28 @@ img {
 h1, h2 {
   color: #222;
   font-family: "PT Sans", sans-serif;
+}
+
+h1 {
   font-size: 1.5rem;
 }
 
-figcaption {
-  font-size: .8rem;
-  font-style: italic;
+figure {
   text-align: center;
+}
+
+figcaption {
+  font-style: italic;
+}
+
+main figure + p {
+  font-weight: bold;
+  font-size: 1.125em;
 }
 
 nav {
   font-size: 1.125rem;
-  font-weight: normal;
+  font-weight: bold;
   font-family: "PT Sans", sans-serif;
 }
 
@@ -36,8 +54,7 @@ nav ol {
   list-style-type: none;
 }
 
-a,
-a:link {
+a{
   color: #8f2440;
   text-decoration: none;
 }
