Update more main.css errors and tags

--- a/css/main.css
+++ b/css/main.css
@@ -64,10 +64,10 @@ dt {
   font-weight: bold;
 }
 
-.last-list {
+.end-list {
   list-style-type: disc;
 }
 
-.italic {
+.scale {
   font-style: italic;
 }
