--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,13 @@ html {
   box-sizing: inherit;
   line-height: 1.5;
   font-weight: normal;
-  font-family: "PT Sans", "PT Serif";
+  font-family: "PT Serif";
 }
 
 h1 {
   color: #3f1622;
   font-weight: bold;
+  font-family: "PT Sans";
 }
 
 a {
@@ -20,6 +21,7 @@ a {
   font-style: normal;
   color: #8f2440;
   font-weight: bold;
+  font-family: "PT Sans";
 }
 
 a:hover {
@@ -47,7 +49,7 @@ figcaption {
 
 blockquote {
   font-size: 1.5rem;
-  font-style: normal;
+  font-style: ;
 }
 
 cite {
@@ -58,6 +60,7 @@ cite {
 h2 {
   color: #3f1622;
   font-weight: bold;
+  font-family: "PT Sans";
 }
 
 .varieties {
